--- a/Tasky/package.json
+++ b/Tasky/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "npx tailwind -i core/static/css/style.css -o core/static/css/tailwind.css"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "build:css": "npx tailwind -i core/static/css/style.css -o core/static/css/tailwind.css",
+      "dev": "npx tailwind -i core/static/css/style.css -o core/static/css/tailwind.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+      "tailwindcss": "^3.4.4"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38"
+      "autoprefixer": "^10.4.19",
+      "postcss": "^8.4.38"
   }
 }
